--- a/tmpl/Index.tmpl
+++ b/tmpl/Index.tmpl
@@ -22,15 +22,6 @@
 		<% template javascript_code() %>
 			<% include template_view::javascript_code() %>
 			$(document).ready(function() {
-				configureTextfield('pci_sign_up_textfield_first_name', 'Nombre');
-				configureTextfield('pci_sign_up_textfield_last_name', 'Apellido');
-				configureTextfield('pci_sign_up_textfield_user_name', 'Nombre de usuario');
-				configureTextfield('pci_sign_up_textfield_email', 'E-Mail');
-				configureTextfield('pci_sign_up_textfield_password', 'Contraseña');
-				configureTextfield('pci_sign_up_textfield_password_verification', 'Confirmar contraseña');
-				configureTextfield('pci_sign_up_textfield_birth_date', 'Fecha de nacimiento');
-				configureDropdownlist('pci_sign_up_dropdownlist_genre');
-				configureDatepicker('pci_sign_up_textfield_birth_date');
 				configureValidator([
 					{ elementId: 'pci_sign_up_textfield_first_name', onChangeFunction: firstNameOnChange },
 					{ elementId: 'pci_sign_up_textfield_last_name', onChangeFunction: lastNameOnChange },
@@ -40,6 +31,15 @@
 					{ elementId: 'pci_sign_up_textfield_password_verification', onChangeFunction: passwordVerificationOnChange },
 					{ elementId: 'pci_sign_up_dropdownlist_genre', onChangeFunction: genreOnChange }
 				]);
+				
+				configureTextfield('pci_sign_up_textfield_first_name');
+				configureTextfield('pci_sign_up_textfield_last_name');
+				configureTextfield('pci_sign_up_textfield_user_name');
+				configureTextfield('pci_sign_up_textfield_email');
+				configurePasswordfield('pci_sign_up_textfield_password');
+				configurePasswordfield('pci_sign_up_textfield_password_verification');
+				configureDatepicker('pci_sign_up_textfield_birth_date');
+				configureDropdownlist('pci_sign_up_dropdownlist_genre');
 			});
 		<% end template %>
 	
