Clarification answer "form" + Dumb server method to receive it

--- a/tmpl/Problem.tmpl
+++ b/tmpl/Problem.tmpl
@@ -44,7 +44,7 @@
 		  					<% end %>
 						<% end %>
 					</div>
-					<% include template_view::clarifications(clarifications) %>
+					<% include template_view::clarifications(clarifications, problem, user_signed_in, user_name) %>
 				</div>
 			</div>
 		<% end template %>
