--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -5,7 +5,7 @@
 	<% view template_view uses ViewContent::TemplateContent %>
 
 
-		<% template clarifications(ClarificationList clarifications) %>
+		<% template clarifications(ClarificationList clarifications, PublicationPointer publication, bool user_signed_in, String user_name) %>
 			<% if (! clarifications->empty()) %>
 				<div id="pci_clarifications_main_container">
 					<div class="pci_horizontal_line"></div>
@@ -26,14 +26,34 @@
 							<div class="pci_clarifications_row_container">
 								<div class="pci_clarifications_question_container">
 									<div class="pci_box_content pci_clarifications_question_content">
-										<%= clarification->question %>
+										<span class="pci_text_clarification">
+											<%= clarification->question %>
+										</span>
 									</div>
 								</div>
 								<div class="pci_clarifications_answer_container">
 									<% if (! clarification->answer.empty()) %>
 										<div class="pci_box_content pci_clarifications_answer_content">
-											<%= clarification->answer %>
+											<span class="pci_text_clarification">
+												<%= clarification->answer %>
+											</span>
 										</div>
+									<% else %>
+										<% if (user_signed_in && user_name.compare(publication->creator_user_name) == 0) %>
+											<div class="pci_clarifications_answer_content">
+												<textarea class="pci_clarifications_answer_textarea pci_textarea_small" id="textarea_<%= clarification->id %>">Responder</textarea>
+												<div class="pci_clarifications_button_container">
+													<a href="javascript:void(0)">
+														<div class="pci_button_classic pci_clarifications_answer_button" id="answer_button_<%= clarification->id %>">
+															Responder
+														</div>
+													</a>
+												</div>
+												<script>
+													configureClarificationTextarea('textarea_<%= clarification->id %>', 'answer_button_<%= clarification->id %>', '<%= clarification->id %>');
+												</script>
+											</div>
+										<% end %>
 									<% end %>
 								</div>
 							</div>
