Added <script></script> inside each javascript_code for syntax highlighting purposes

--- a/tmpl/Ideas.tmpl
+++ b/tmpl/Ideas.tmpl
@@ -12,10 +12,12 @@
 	
 	
 		<% template javascript_code() %>
+			<script>
 			<% include template_view::javascript_code() %>
 			$(document).ready(function() {
 				setActiveNavigationButton('pci_navigation_menu_ideas_button');
 			});
+			</script>
 		<% end template %>
 	
 	
