--- a/tmpl/User.tmpl
+++ b/tmpl/User.tmpl
@@ -13,9 +13,11 @@
 		
 		<% template javascript_code() %>
 			<% include template_view::javascript_code() %>
+			<script>
 			$(document).ready(function() {
 				setActiveNavigationButton('pci_navigation_menu_profile_button');
 			});
+			</script>
 		<% end template %>
 	
 	
