--- a/tmpl/NewProblem.tmpl
+++ b/tmpl/NewProblem.tmpl
@@ -18,10 +18,12 @@
 		
 		
 		<% template javascript_code() %>
+			<script>
 			<% include template_view::javascript_code() %>
 			$(document).ready(function(){
 				configureTexteditor('pci_texteditor');
 			});
+			</script>
 		<% end template %>
 		
 		
