Little redesign, fixed profile recent activity sorting

--- a/tmpl/Problem.tmpl
+++ b/tmpl/Problem.tmpl
@@ -61,7 +61,7 @@
 					<% end %>
 					<div id="pci_problem_header_container">
 						<a id="problem_edit_button">
-							<div class="pci_button_classic pci_header_bar_button">
+							<div class="pci_button_classic">
 								Editar
 							</div>
 						</a>
@@ -82,12 +82,12 @@
 						<textfield id="pci_textfield"></textfield>
 						</div>
 						<a id="problem_finish_edit_button">
-							<div class="pci_button_classic pci_header_bar_button">
+							<div class="pci_button_classic">
 								Finalizar
 							</div>
 						</a>
 						<a id="problem_cancel_edit_button">
-							<div class="pci_button_classic pci_header_bar_button">
+							<div class="pci_button_classic">
 								Cancelar
 							</div>
 						</a>
