--- a/tmpl/Problems.tmpl
+++ b/tmpl/Problems.tmpl
@@ -28,17 +28,29 @@
 				<div class="pci_box_container">
 					<% if user_signed_in %>
 						<% include template_view::toolbar_problems() %>
-						<div class="pci_horizontal_line"></div>
 					<% end %>
-					<% foreach problem in *problems %>
-						<% item %>
-							<div class="pci_box_description pci_problems_problem_description">
-								<% include template_view::problem_description(problem) %>
-							</div>
-						<% end %>
-					<% empty %>
-						No se encontraron problemas
-					<% end %>
+					<ul class="nav nav-tabs">
+						<li class="active"><a href="#tab1" data-toggle="tab">Al azar</a></li>
+						<li><a href="#tab2" data-toggle="tab">Mas votados</a></li>
+						<li><a href="#tab3" data-toggle="tab">Sin solucion</a></li>
+					</ul>
+					<div class="tab-content">
+						<div class="tab-pane active" id="tab1">
+							<% foreach problem in *problems %>
+								<% item %>
+									<% include template_view::problem_description(problem) %>
+								<% end %>
+							<% empty %>
+								No se encontraron problemas
+							<% end %>
+						</div>
+						<div class="tab-pane" id="tab2">
+							<p>Problemas mas votados</p>
+						</div>
+						<div class="tab-pane" id="tab3">
+							<p>Problemas sin solucion</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		<% end template %>
