--- a/tmpl/User.tmpl
+++ b/tmpl/User.tmpl
@@ -30,25 +30,36 @@
 					<div id="column_1">
 						<div id="content_wrapper">
 							<div id="title_container">
-								<div id="rank_icon"></div>
-								<div id="big_name"><%= user->first_name %> <%= user->last_name %></div>
-								<div id="user_stats">
-									<div class="stat_container">
-										<div class="stat_number"><%= number_of_publications %></div>
-										<div class="stat_description">Publicaciones</div>
+								<div class="row-fluid">								
+									<div id="rank_icon"></div>
+									<div id="big_name"><%= user->first_name %> <%= user->last_name %></div>
+								</div>
+								<div class="row-fluid">
+									<div class="span3">
+										<div>
+											<div class="stat_number"><%= number_of_publications %></div>
+											<div class="stat_description">Publicaciones</div>
+										</div>
 									</div>
-									<div class="stat_container">
+									<div class="span3">
+										<div>
 										<div class="stat_number"><%= number_of_problems %></div>
 										<div class="stat_description">Problemas</div>
+										</div>
 									</div>
-									<div class="stat_container">
+									<div class="span3">
+										<div>
 										<div class="stat_number"><%= number_of_solutions %></div>
 										<div class="stat_description">Soluciones</div>
+										</div>
 									</div>
-									<div class="stat_container">
+									<div class="span3">
+										<div>
 										<div class="stat_number"><%= number_of_accepted_solutions %></div>
 										<div class="stat_description">Soluciones aceptadas</div>
+										</div>
 									</div>
+
 								</div>
 							</div>
 							<h2>Descripcion personal</h2>
