--- a/www/css/template.css
+++ b/www/css/template.css
@@ -177,12 +177,13 @@ div.pci_box_error {
 }
 
 div.pci_button_classic {
+	float:right;
 	background-color:#FFFFFF;
 	border-color:#C2C2C2;
-	border-radius:8px;
+	border-radius:4px;
 	border-style:solid;
 	border-width:1px;
-	box-shadow:0px -4px 8px 0px #D1D1D1 inset;
+	box-shadow:0px 0px 4px 0px #D1D1D1 inset;
 	color:#333333;
 	font-family:pci_font_button_classic;
 	font-size:0.875em;
@@ -282,7 +283,7 @@ a.pci_link_description {
 	color:#333333;
 	display:block;
 	font-family:pci_font_link_description;
-	font-size:0.9375em;
+	font-size:2em;
 }
 
 a.pci_link_footer {
@@ -305,7 +306,7 @@ a.pci_link_user_name:hover {
 input.pci_submit {
 	background-color:#FFFFFF;
 	border-color:#C2C2C2;
-	border-radius:8px;
+	border-radius:4px;
 	border-style:solid;
 	border-width:1px;
 	box-shadow:0px -4px 8px 0px #D1D1D1 inset;
@@ -326,7 +327,7 @@ input.pci_submit:hover {
 span.pci_text_description {
 	color:#6F6F6F;
 	font-family:pci_font_text_description;
-	font-size:0.875em;
+	font-size:1em;
 }
 
 span.pci_text_clarification {
@@ -397,6 +398,12 @@ input.pci_textfield.set {
 	color:#444444;
 }
 
+.tick_on {
+	height: 48px;
+	background-image: url('../img/tick.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+}
 
 /*
 ----------------------------------------------------------------------------------------------
@@ -460,8 +467,9 @@ div.pci_clarifications_answer_button {
 */
 
 #pci_header_bar_main_container {
-	background-color:#6CA4C8;
-	box-shadow:0px 1px 4px 0px #000000, 0px -4px 16px 0px #3D6A87 inset;
+	/* background-color:#6CA4C8; */
+	background-color: #111;
+	box-shadow:0px 0px 2px 0px #333;
 	height:48px;
 	position:fixed;
 	top:0px;
@@ -470,7 +478,7 @@ div.pci_clarifications_answer_button {
 }
 
 #pci_header_bar_central_container {
-	margin:0px 128px;
+	margin:0px 10px;
 	min-width:1024px;
 }
 
@@ -588,7 +596,7 @@ div.pci_information_footer_link {
 */
 
 #pci_navigation_menu_main_container {
-	left:128px;
+	left:10px;
 	position:fixed;
 	top:48px;
 }
