--- a/tmpl/Index.tmpl
+++ b/tmpl/Index.tmpl
@@ -51,18 +51,8 @@
 			<div id="pci_index_main_container">
 				<div id="pci_index_TO_DEFINE_container">
 					<a href="<% url "/problems" %>">
-						<h2>
-							Problemas
-						</h2>
+						<img src="img/community.jpg" >
 					</a>
-					Comienzo content
-					<br />
-					<br />
-					<br />
-					Index content
-					<br />
-					<br />
-					<br />
 				</div>
 				<div id="pci_index_sign_up_container">
 					<% include template_view::sign_up_form(sign_up_form_info) %>
