--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -224,14 +224,14 @@
 			<div class="pci_box_container pci_problems_problem_description">
 				<div class="row-fluid">
 					<div class="span2">
-						<div class="row-fluid"> <!-- Votes & Answers -->
+						<div class="row-fluid pci_problems_votes"> <!-- Votes & Answers -->
 							<div class="span6">
-								<center>125</center>
-								<center>Votos</center>
+								<div class="number">125</div>
+								<div>Votos</div>
 							</div>
 							<div class="span6">
-								<center>6</center>
-								<center>Soluciones</center>
+								<div class="number">6</div>
+								<div>Soluciones</div>
 							</div>
 						</div>
 					</div>
