--- a/tmpl/User.tmpl
+++ b/tmpl/User.tmpl
@@ -30,7 +30,7 @@
 					<div id="column_1">
 						<div id="content_wrapper">
 							<div id="title_container">
-								<div class="row-fluid">								
+								<div class="row-fluid title">								
 									<div id="rank_icon"></div>
 									<div id="big_name"><%= user->first_name %> <%= user->last_name %></div>
 								</div>
