--- a/www/css/problems.css
+++ b/www/css/problems.css
@@ -11,3 +11,15 @@ body {
 div.pci_problems_problem_description {
 	margin-bottom:16px;
 }
+
+div.pci_problems_votes {
+	font-size:16px;
+	text-align:center;
+}
+
+div.pci_problems_votes .number {
+	font-size: 30px;
+	color: #8BC7FF;
+	text-shadow: 1px 1px #000;
+	margin-bottom:8px;
+}
