--- a/www/css/user.css
+++ b/www/css/user.css
@@ -38,9 +38,13 @@ body {
 	border-radius: 4px;
 }
 
+.title{
+	margin-bottom:15px;
+}
+
 #title_container{
 	width:100%;
-	height: 200px; /* same as picture */
+	/*height: 200px; /* same as picture */
 }
 
 #big_name{
