--- a/tmpl/Problems.tmpl
+++ b/tmpl/Problems.tmpl
@@ -31,12 +31,12 @@
 					<% end %>
 					<ul class="nav nav-tabs">
 						<li class="active"><a href="#tab1" data-toggle="tab">Al azar</a></li>
-						<li><a href="#tab2" data-toggle="tab">Mas votados</a></li>
-						<li><a href="#tab3" data-toggle="tab">Sin solucion</a></li>
+						<li><a href="#tab2" data-toggle="tab">Recientes</a></li>
+						<li><a href="#tab3" data-toggle="tab">Sin resolver</a></li>
 					</ul>
 					<div class="tab-content">
 						<div class="tab-pane active" id="tab1">
-							<% foreach problem in *problems %>
+							<% foreach problem in *random_problems %>
 								<% item %>
 									<% include template_view::problem_description(problem) %>
 								<% end %>
@@ -45,10 +45,22 @@
 							<% end %>
 						</div>
 						<div class="tab-pane" id="tab2">
-							<p>Problemas mas votados</p>
+							<% foreach problem in *latest_problems %>
+								<% item %>
+									<% include template_view::problem_description(problem) %>
+								<% end %>
+							<% empty %>
+								No se encontraron problemas sin resolver
+							<% end %>							
 						</div>
 						<div class="tab-pane" id="tab3">
-							<p>Problemas sin solucion</p>
+							<% foreach problem in *unsolved_problems %>
+								<% item %>
+									<% include template_view::problem_description(problem) %>
+								<% end %>
+							<% empty %>
+								No se encontraron problemas sin resolver
+							<% end %>
 						</div>
 					</div>
 				</div>
