Lots of changes (meeting)

--- a/tmpl/Index.tmpl
+++ b/tmpl/Index.tmpl
@@ -55,7 +55,7 @@
 					</a>
 				</div>
 				<div id="pci_index_sign_up_container">
-					<% include template_view::sign_up_form(sign_up_form_info) %>
+					<% include template_view::create_user_form() %>
 				</div>
 			</div>
 			<% include template_view::information_footer() %>
