--- a/tmpl/NewProblem.tmpl
+++ b/tmpl/NewProblem.tmpl
@@ -32,7 +32,7 @@
 			<% include template_view::navigation_menu() %>
 			<div id="pci_new_problem_main_container">
 				<div class="pci_box_container">
-					<% include template_view::new_problem_form(new_problem_form_info) %>
+					<% include create_problem_form() %>
 				</div>
 			</div>
 		<% end template %>
