--- a/tmpl/NewSolution.tmpl
+++ b/tmpl/NewSolution.tmpl
@@ -32,7 +32,7 @@
 			<% include template_view::navigation_menu() %>
 			<div id="pci_new_solution_main_container">
 				<div class="pci_box_container">
-					<% include template_view::new_solution_form(new_solution_form_info) %>
+					<% include create_solution_form(problem_id) %>
 				</div>
 			</div>
 		<% end template %>
